# FrogLords

./:    .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONVENTIONS.md  GEMINI.md  PRINCIPLES.md  SCRIPTS.md
.claude/commands/: REFINE  RETRO.md  SYSTEM  TASKS
IDEAS/: lifter_as_sensor_concept.md
ISSUES/: character_slow_sink.md
PLANS/: DEFERRAL_LOG.md  DEPENDENCY_STACK.md  DESIGN_BACKLOG.md  IMPROVE_BACKLOG.md  IMPROVE_character_tuning_dependency.md  MAINTENANCE_BACKLOG.md  MAINTENANCE_magic_number_for_pi.md  MAINTENANCE_magic_number_in_easing_update.md  REFACTOR_BACKLOG.md  REFACTOR_extract_joint_indices.md  acceleration_tilt_implementation.md  animation_tuning_plan.md  code_review_attach-skeleton-to-body.md  code_review_debug_visual_overhaul.md  code_review_pose_blending.md  code_review_smoothed_walk_transition.md  code_review_static_keyframe_preview.md  collision_system_implementation.md  dependency_stack.md  design_backlog.md  feature_debug_visual_overhaul.md  feature_pose_blending.md  feature_primary_skeletal_animation.md  feature_secondary_motion.md  feature_smoothed_walk_transition.md  freeze_velocity_trail_on_stop_CODE_REVIEW.md  freeze_velocity_trail_on_stop_FEATURE.md  freeze_velocity_trail_on_stop_PLAN.md  freeze_velocity_trail_on_stop_PLAN_REVIEW.md  implementation_attach-skeleton-to-body.md  implementation_debug_visual_overhaul.md  implementation_pose_blending.md  implementation_primary_skeletal_animation.md  implementation_refactor_game_world.md  implementation_secondary_motion.md  implementation_skeleton_system.md  implementation_speed_animation_scaling.md  implementation_static_keyframe_preview.md  iteration_attach-skeleton-to-body.md  iteration_debug_visual_overhaul.md  (+24 more)
PLANS/ARCHIVE/: 20251006_120000_implementation_refactor_game_world.md  20251006_120000_iteration_refactor_game_world.md  20251006_120000_plan_review_speed_animation_scaling.md  20251006_120000_review_refactor_game_world.md  20251006_130000_implementation_attach-skeleton-to-body.md  20251006_220556_implementation_secondary_motion.md  20251006_220556_iteration_secondary_motion.md  20251007_220651_feature_primary_skeletal_animation.md  20251007_220651_iteration_primary_skeletal_animation.md  20251007_220651_plan_review_primary_skeletal_animation.md  20251008_232831_implementation_static_keyframe_preview.md  20251009_154944_code_review_primary_skeletal_animation.md  20251009_154944_iteration_primary_skeletal_animation.md  20251009_221636_code_review_secondary_motion.md  20251009_221636_implementation_secondary_motion.md  20251009_221636_iteration_secondary_motion.md  20251010_001852_feature_camera_zoom.md  20251010_162555_refactor_yaw_direction_utilities.md  20251010_223503_feature_debug_visual_overhaul.md  20251011_114904_code_review_pose_blending.md  20251011_114904_plan_review_pose_blending.md  20251011_144019_feature_smoothed_walk_transition.md  20251011_144019_implementation_smoothed_walk_transition.md  20251011_170652_code_review_velocity_based_acceleration_tilt_scaling.md  20251011_170652_implementation_velocity_based_acceleration_tilt_scaling.md  20251011_181137_refactor_y_axis_up_vector_constant.md  20251011_190813_maintenance_c_style_void_parameters.md  20251011_190831_maintenance_unused_parameter_markers.md  20251011_235818_freeze_velocity_trail_on_stop_FEATURE.md  20251011_235818_freeze_velocity_trail_on_stop_PLAN.md  20251011_235818_freeze_velocity_trail_on_stop_PLAN_REVIEW.md  20251012_175817_MAINTENANCE_code_cleanup_remove_extraneous_comments.md  20251012_175838_MAINTENANCE_unused_variable_suppression.md  20251012_175914_REFACTOR_extract_angle_wrapping_utilities.md  20251012_224839_running_gait_keyframes_CODE_REVIEW.md  20251012_224839_running_gait_keyframes_FEATURE.md  (+49 more)
REVIEWS/: collision_phase_a_implementation_actions.md  collision_system_phase_a_review.md  collision_system_phase_b_review.md  overgrowth_sphere_configuration_reanalysis.md  single_sphere_collision_principle_check.md  single_sphere_experiment_summary.md
TASKS/: ALIGN_TASKS.md  ARCHIVE_ITERATION.md  BACKLOG_REFINEMENTS.md  BACKLOG_SYSTEMS.md  BACKLOG_WORKFLOW.md  CHECK_PRINCIPLES.md  CLARIFY_FEATURE.md  COMMIT.md  CURRENT_PLAN.md  DECOMPOSE.md  DECOMPOSE_PLAN.md  DEFER_FEATURE.md  DEPENDENCY_STACK.md  EXTERNAL_REVIEW.md  FINALIZE_ITERATION.md  IDENTIFY_REFACTORS.md  IMPLEMENTATION_STEP.md  ITERATION.md  MERGE.md  META_TASK_IMPROVEMENT.md  MODIFY_PLAN.md  NEXT_FEATURE.md  PATTERNS.md  PLAN_ITERATION.md  README.md  RETRO.md  RETROSPECTIVE.md  REVIEW_PLAN.md  REVIEW_STEP.md  SYNC_PRINCIPLES.md  UNDERSTAND_CONCEPT.md  UPDATE_BACKLOG.md  UPDATE_DEPENDENCIES.md  WORKFLOW.md
TOOLS/: CODEX.md  GEMINI.md  SCRIPTS.md
scripts/: archive-feature.ps1  archive-iteration.ps1  archive-refactor.ps1  archive.ps1  archive_retro.ps1  commit_changes.ps1  create-branch.ps1  create_feature_branch.ps1  create_iteration_branch.ps1  create_refactor_branch.ps1  normalize_encoding.ps1  review_staged_changes.ps1  run_clang_format.ps1  run_clang_tidy.ps1  run_cppcheck.ps1
shaders/: wireframe.glsl
src/: main.cpp  sokol_impl.cpp  wireframe_shader.h
tests/: CMakeLists.txt
tests/foundation/: test_spring_damper.cpp
(+375 files in other folders)
